# BigShopBot

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: config_reader.py
app/db/: models.py  repo.py
app/dialogs/: __init__.py
app/dialogs/admin/: __init__.py  aselected.py  astates.py  awindows.py
app/dialogs/consultation/: __init__.py  consul_config.py  consul_selected.py  consul_states.py  consul_window.py
app/dialogs/main_dialog/: __init__.py  keyboards.py  lexicon.py  selected.py  states.py  windows.py
app/filters/: admin_filter.py
app/handlers/: admin.py  private.py  setup.py
app/middlewares/: lang.py  register.py
app/services/: fluent.py  payment.py
app/utils/: callback_data.py
resources/locales/: en.ftl  ru.ftl
