[tool.poetry]
name = "Arikusei"
version = "0.1.0"
description = "Interactive bot store with the ability to sell access to various digital resources and communicate with users"
authors = ["Viktor Bagrov <Keramogranitus@gmail.com>"]
license = "BSD License (BSD)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "23.2.1"
aiogram = "3.4.1"
aiogram-dialog = "2.1.0"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
attrs = "23.2.0"
babel = "2.14.0"
build = "1.2.1"
cachecontrol = "0.14.0"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.3"
fluent-compiler = "0.3"
fluent-syntax = "0.19.0"
fluentogram = "1.1.6"
frozenlist = "1.4.1"
greenlet = "3.0.3"
idna = "3.6"
importlib-metadata = "7.1.0"
installer = "0.7.0"
jaraco-classes = "3.3.1"
jinja2 = "3.1.3"
keyring = "24.3.1"
magic-filter = "1.0.12"
markupsafe = "2.1.5"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pydantic = "2.5.3"
pydantic-settings = "2.2.1"
pydantic-core = "2.14.6"
pyproject-hooks = "1.0.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.7.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sqlalchemy = "2.0.28"
tomli = "2.0.1"
tomlkit = "0.12.4"
trove-classifiers = "2024.3.25"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
yarl = "1.9.4"
zipp = "3.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
